<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>opennars</groupId>
    <artifactId>narchy</artifactId>
    <version>1.8-SNAPSHOT</version>

    <packaging>pom</packaging>

    <prerequisites>
        <maven>3.3.9</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
    </properties>


    <build>


        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>

                        <skipTests>true</skipTests> <!-- WARNING -->

                        <testFailureIgnore>true</testFailureIgnore>
                        <disableXmlReport>true</disableXmlReport>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>

                    <!--<showWarnings>true</showWarnings>-->
                    <!--<verbose>true</verbose>-->
                    <!--<useIncrementalCompilation>true</useIncrementalCompilation>-->

                    <fork>true</fork>
                    <source>1.9</source>
                    <target>1.9</target>
                    <useIncrementalCompilation>true</useIncrementalCompilation>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.5.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.5.1</version>
            </plugin>

        </plugins>
    </build>

    <modules>
        <module>util</module>
        <module>logic</module>
        <module>nal</module>
        <module>app</module>
        <module>lab</module>
        <module>guifx</module>
        <module>web</module>
        <module>perf</module>
    </modules>
</project>
